UrlBuilder: constructor with Charset + avoid multiple String.trim() + use String.isBlank() instead of String.trim().isEmpty() + properly
Signed-off-by: pizzi80 <paolo@given2.com>